# dards

./: README.md
DARDS/: pyproject.toml  run_dards.py
DARDS/src/dards/: types.py
DARDS/src/dards/config/: defaults.py
DARDS/src/dards/data/: __init__.py  assembler.py  mock_corr.py  mock_provider.py  provider.py  schema.py  universe.py  validators.py
DARDS/src/dards/engine/: backtest.py  decision.py  drawdown_guard.py  pipeline.py  posture.py  risk_budget.py  risk_metrics.py  turnover.py  vol_allocator.py
DARDS/src/dards/features/: confidence.py  correlation.py  persistence.py  risk_pressure.py  risk_state.py
DARDS/src/dards/reporting/: desk_brief.py  performance_report.py  run_archive.py
DARDS/src/dards/stress/: runner.py  scenarios.py
DARDS/tests/: test_contracts.py
