[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "dards"
version = "0.1.0"
description = "Decision-Aware Risk & Deployment System"
requires-python = ">=3.10"


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]